--- a/src/components/layouts/notice.css
+++ b/src/components/layouts/notice.css
@@ -125,7 +125,7 @@
   display: flex;
   align-items: center;
   background-color: #ffffff;
-  border: 1px solid #ddd;
+  border: none;
   border-radius: 20px;
   padding: 8px 15px;
   width: 600px;
@@ -134,7 +134,7 @@
 .notice-search-icon {
   display: inline-flex;
   align-items: center;
-  font-size: 22px;  
+  font-size: 20px;  
   font-weight: bold; 
   color: #333;  
   white-space: nowrap;
