공모전 [게시글 수정] 페이지 수정, 게시글 리스트 수정, 더미데이터 추가

--- a/src/components/layouts/pages/add_contest.css
+++ b/src/components/layouts/pages/add_contest.css
@@ -64,7 +64,7 @@
 /* 텍스트 필드 */
 .add-contest-form textarea {
   resize: vertical;
-  min-height: 150px;
+  min-height: 800px; /* 텍스트박스의 최소 높이를 더 크게 설정 */
 }
 
 /* 버튼 스타일 */
