--- a/src/components/layouts/pages/contest.css
+++ b/src/components/layouts/pages/contest.css
@@ -84,7 +84,6 @@ body {
   width: 15%; /* 상태와 조회수에 좁은 공간 할당 */
 }
 
-
 /* 테이블 헤더 고정 */
 .contest-table th {
   background-color: #f9f9f9;
@@ -100,7 +99,7 @@ body {
   gap: 15px;
 }
 
-/* 필터 버튼 스타일 */
+/* 필터 버튼 기본 스타일 */
 .filter-button {
   background-color: #f0f0f0;
   border: 2px solid #ddd;
@@ -114,11 +113,18 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+/* 마우스 호버 상태 */
+.filter-button:hover {
+  background-color: #d6d6d6; /* 호버 시 색상 변경 */
+  border-color: #bcbcbc; /* 호버 시 테두리 색상 변경 */
+  color: #000; /* 호버 시 텍스트 색상 변경 */
+}
+
 /* active 상태 */
 .filter-button.active {
-  background-color: #e23b6c;
-  color: white;
-  border-color: #e23b6c;
+  background-color: #e23b6c; /* 활성 상태 배경색 */
+  color: white; /* 활성 상태 텍스트 색 */
+  border-color: #e23b6c; /* 활성 상태 테두리 색 */
   box-shadow: 0 4px 6px rgba(92, 3, 70, 0.74);
 }
 
@@ -166,6 +172,7 @@ body {
   padding: 7px 12px;
   cursor: pointer;
   font-size: 17px;
+  font-weight: bold;
 }
 
 .add-contest-button button:hover {
