--- a/src/components/layouts/pages/contest_detail.css
+++ b/src/components/layouts/pages/contest_detail.css
@@ -10,7 +10,7 @@
 
 /* 제목 스타일 */
 .contest-title {
-  font-size: 2rem;
+  font-size: 2.0rem;
   font-weight: bold;
   margin-bottom: 20px;
   text-align: left;
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   border: 1px solid #ddd;
   border-radius: 10px;
   overflow: hidden;
@@ -75,6 +75,12 @@
   line-height: 1.8;
 }
 
+.contest-content h2 {
+  font-weight: bold;
+  font-size: 1.7rem;
+  margin-bottom: 20px;
+}
+
 /* 큰 이미지 섹션 */
 .large-image-section {
   margin-top: 30px;
@@ -88,7 +94,6 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
   margin: 0 auto; /* 가운데 정렬 */
 }
-
 
 /* 버튼 섹션 */
 .button-container {
@@ -106,22 +111,95 @@
   transition: background-color 0.3s ease;
 }
 
-/* 수정 버튼 */
 .edit-button {
   background-color: #007bff;
   color: white;
+  font-weight: bold;
 }
 
 .edit-button:hover {
   background-color: #0056b3;
 }
 
-/* 삭제 버튼 */
 .delete-button {
   background-color: #dc3545;
   color: white;
+  font-weight: bold;
 }
 
 .delete-button:hover {
+  background-color: #a71d2a;
+}
+
+/* 게시글 수정 UI */
+.edit-mode {
+  margin-top: 20px;
+}
+
+.edit-contest-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.input-group {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.input-group label {
+  flex: 1;
+  min-width: 250px;
+  font-weight: bold; /* 카테고리 제목 bold 처리 */
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-top: 5px;
+}
+
+textarea {
+  resize: vertical;
+  min-height: 800px; /* 텍스트박스의 수직 길이 확장 */
+}
+
+.button-container {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+}
+
+.submit-button {
+  background-color: #00acae;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.submit-button:hover {
+  background-color: #007779;
+}
+
+.cancel-button {
+  background-color: #dc3545;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.cancel-button:hover {
   background-color: #a71d2a;
 }
