--- a/src/components/layouts/pages/contest.css
+++ b/src/components/layouts/pages/contest.css
@@ -286,7 +286,7 @@ body {
   padding: 8px 12px;
   font-size: 15px;
   color: black;
-  border: 1px solid #ddd;
+  border: 1px solid #5a5a5a;
   border-radius: 4px;
   background-color: #f0f0f0;
   cursor: pointer;
