--- a/src/components/layouts/notice.css
+++ b/src/components/layouts/notice.css
@@ -16,6 +16,7 @@
 
 /* 글 작성 버튼 */
 .notice-add-button {
+  
   text-align: right;
   margin-bottom: 20px;
 }
@@ -24,6 +25,7 @@
   background-color: #00acae;
   color: white;
   border: none;
+  font-weight: bold;
   border-radius: 10px;
   padding: 7px 12px;
   cursor: pointer;
